lib/hemingway/math/math.treetop
require "hemingway/math/math_nodes"

module Hemingway
  grammar Math

    # Example: $ \Pi = 3.14159 $
    rule math
      math_start symbol math_end <MathNode>
    end

    # Example : \Pi
    # Notes:
    #  - Once again, math_symbol need not have an html method defined on it.
    #  When .html is called on symbol, it knows the match is actually a
    #  math_symbol, so that is what symbol.html is actually calling.
    rule symbol
      math_symbol
    end

    rule math_start
      "$"
    end

    rule math_end
      "$"
    end

  end
end
